Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -564,30 +564,87 @@ Vulnerabilities:
 - Multi-Tenancy Risk: In a shared environment, vulnerabilities in one client’s data or configurations can affect others. Although providers implement security measures, the risk of cross-tenant attacks exists.
 
 **2 Infrastructure as a Service (IaaS)**
+
 IaaS provides the underlying hardware infrastructure to run applications and services. Users are responsible for managing the operating system, applications, and data while the provider maintains the physical infrastructure.
+
 Characteristics:
-Virtualized Resources: Users can rent virtualized computing resources such as virtual machines (VMs), storage, and networking components.
-Scalability and Flexibility: IaaS allows users to scale resources up or down based on demand, providing flexibility for dynamic workloads.
-Pay-as-you-go: The user only pays for the resources they use, which helps reduce operational costs.
+
+- Virtualized Resources: Users can rent virtualized computing resources such as virtual machines (VMs), storage, and networking components.
+- Scalability and Flexibility: IaaS allows users to scale resources up or down based on demand, providing flexibility for dynamic workloads.
+- Pay-as-you-go: The user only pays for the resources they use, which helps reduce operational costs.
+
 Examples of IaaS:
-Amazon Web Services (AWS)
-Microsoft Azure
-Google Cloud Platform (GCP)
+
+- Amazon Web Services (AWS)
+- Microsoft Azure
+- Google Cloud Platform (GCP)
+
 Vulnerabilities:
-Shared Resources: Since IaaS environments are often multi-tenant, there is a risk of data leakage or side-channel attacks from neighboring tenants if proper isolation measures are not in place.
-Insider Threats: Providers may have access to customer data and systems, creating potential risks if their staff is compromised or malicious.
-Misconfigurations: Improper configuration of virtual machines or cloud networking can lead to vulnerabilities such as open ports, improper access control, and exposed sensitive data.
-3 Platform as a Service (PaaS)
+
+- Shared Resources: Since IaaS environments are often multi-tenant, there is a risk of data leakage or side-channel attacks from neighboring tenants if proper isolation measures are not in place.
+- Insider Threats: Providers may have access to customer data and systems, creating potential risks if their staff is compromised or malicious.
+- Misconfigurations: Improper configuration of virtual machines or cloud networking can lead to vulnerabilities such as open ports, improper access control, and exposed sensitive data.
+
+**3 Platform as a Service (PaaS)**
+
 PaaS provides a platform that allows customers to develop, run, and manage applications without worrying about the underlying infrastructure. It abstracts much of the complexity involved in infrastructure management and offers tools for developers.
+
 Characteristics:
-Integrated Development Environment (IDE): PaaS often comes with a pre-configured development environment, which simplifies coding and deployment.
-Middleware and Databases: In addition to basic compute resources, PaaS typically includes middleware, databases, and other software components that developers can leverage.
-Developer-Focused: PaaS is designed to streamline the application development lifecycle, from coding to deployment.
+
+- Integrated Development Environment (IDE): PaaS often comes with a pre-configured development environment, which simplifies coding and deployment.
+- Middleware and Databases: In addition to basic compute resources, PaaS typically includes middleware, databases, and other software components that developers can leverage.
+- Developer-Focused: PaaS is designed to streamline the application development lifecycle, from coding to deployment.
+
 Examples of PaaS:
-Google App Engine
-Heroku
-Microsoft Azure App Service
+
+- Google App Engine
+- Heroku
+- Microsoft Azure App Service
+
 Vulnerabilities:
-Code Injection: PaaS platforms host applications written by users, making them vulnerable to code injection attacks if the application code is not properly secured.
-Data Leakage: The developer may inadvertently expose sensitive data or credentials if security best practices are not followed.
-Shared Infrastructure Risks: Similar to IaaS, PaaS environments may use shared infrastructure, which can lead to risks if tenants do not adequately isolate their applications.
+
+- Code Injection: PaaS platforms host applications written by users, making them vulnerable to code injection attacks if the application code is not properly secured.
+- Data Leakage: The developer may inadvertently expose sensitive data or credentials if security best practices are not followed.
+- Shared Infrastructure Risks: Similar to IaaS, PaaS environments may use shared infrastructure, which can lead to risks if tenants do not adequately isolate their applications.
+
+| Model | Description | Key Characteristics | Examples | Common Vulnerabilities |
+|-------|-------------|---------------------|----------|------------------------|
+| **Software as a Service (SaaS)** | Cloud-based software accessible via the internet without local installation. | - Access via web browser<br>- Fully managed by provider<br>- Subscription-based pricing | Google Workspace, Microsoft 365, Salesforce | - Data privacy & compliance risks (GDPR, HIPAA, CCPA)<br>- Limited control over updates & features<br>- Multi-tenancy risk (cross-tenant attacks) |
+| **Infrastructure as a Service (IaaS)** | Provides virtualized computing resources; user manages OS, apps, and data. | - Virtualized resources (VMs, storage, networking)<br>- Scalable and flexible<br>- Pay-as-you-go pricing | AWS, Microsoft Azure, Google Cloud Platform | - Shared resources risk (data leakage, side-channel attacks)<br>- Insider threats from provider staff<br>- Misconfigurations leading to exposed data |
+| **Platform as a Service (PaaS)** | Platform for developing, running, and managing apps without handling infrastructure. | - Integrated Development Environment (IDE)<br>- Includes middleware and databases<br>- Developer-focused tools | Google App Engine, Heroku, Microsoft Azure App Service | - Code injection vulnerabilities<br>- Data leakage from insecure coding<br>- Shared infrastructure risks |
+
+
+
+
+
+
+
+
+
+
+```mermaid
+flowchart TB
+    title["Cloud Service Models - Responsibility Split"]
+
+    subgraph SaaS[💻 SaaS]
+    direction TB
+    saas_provider[Provider manages:<br>- Infrastructure<br>- Platform<br>- Application]
+    saas_user[User manages:<br>- Data & Usage]
+    end
+
+    subgraph PaaS[🛠️ PaaS]
+    direction TB
+    paas_provider[Provider manages:<br>- Infrastructure<br>- Platform (OS, Middleware, DB)]
+    paas_user[User manages:<br>- Application Code<br>- Data]
+    end
+
+    subgraph IaaS[⚙️ IaaS]
+    direction TB
+    iaas_provider[Provider manages:<br>- Infrastructure (Servers, Storage, Networking)]
+    iaas_user[User manages:<br>- OS<br>- Applications<br>- Data]
+    end
+
+    title --> SaaS
+    title --> PaaS
+    title --> IaaS
+```
