Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -634,13 +634,13 @@ flowchart TB
 
     subgraph PaaS[🛠️ PaaS]
     direction TB
-    paas_provider[Provider manages:<br>- Infrastructure<br>- Platform (OS, Middleware, DB)]
+    paas_provider[Provider manages:<br>- Infrastructure<br>- Platform: OS, Middleware, DB]
     paas_user[User manages:<br>- Application Code<br>- Data]
     end
 
     subgraph IaaS[⚙️ IaaS]
     direction TB
-    iaas_provider[Provider manages:<br>- Infrastructure (Servers, Storage, Networking)]
+    iaas_provider[Provider manages:<br>- Infrastructure: Servers, Storage, Networking]
     iaas_user[User manages:<br>- OS<br>- Applications<br>- Data]
     end
 
