Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -613,13 +613,74 @@ Vulnerabilities:
 | **Infrastructure as a Service (IaaS)** | Provides virtualized computing resources; user manages OS, apps, and data. | - Virtualized resources (VMs, storage, networking)<br>- Scalable and flexible<br>- Pay-as-you-go pricing | AWS, Microsoft Azure, Google Cloud Platform | - Shared resources risk (data leakage, side-channel attacks)<br>- Insider threats from provider staff<br>- Misconfigurations leading to exposed data |
 | **Platform as a Service (PaaS)** | Platform for developing, running, and managing apps without handling infrastructure. | - Integrated Development Environment (IDE)<br>- Includes middleware and databases<br>- Developer-focused tools | Google App Engine, Heroku, Microsoft Azure App Service | - Code injection vulnerabilities<br>- Data leakage from insecure coding<br>- Shared infrastructure risks |
 
+:brain: SaaS provides software over the internet, PaaS offers a platform for developing and deploying applications, and IaaS delivers virtualized computing resources like servers and storage on demand.
 
+In addition to the service models, cloud systems can be deployed in different ways based on an organization's needs. These deployment models vary in terms of control, management, and the level of security they offer.
 
+**1 Public Cloud**
 
+The public cloud is owned and operated by third-party cloud providers and offers services to multiple organizations. This model is highly cost-effective as resources are shared among many tenants.
 
+Characteristics:
 
+- Shared Resources: Public clouds use shared infrastructure, where multiple customers’ workloads are hosted on the same hardware.
+- Cost-Effective: As the infrastructure is shared, the cost is spread out, making it more affordable for smaller organizations or projects with varying resource needs.
+- Scalability: Public cloud services are highly scalable, enabling organizations to adjust their resource usage based on demand.
 
+Examples of Public Cloud Providers:
+- Amazon Web Services (AWS)
+- Google Cloud Platform (GCP)
+- Microsoft Azure
 
+Vulnerabilities:
+
+- Data Security and Privacy Concerns: Storing sensitive data on a shared infrastructure can pose risks if the cloud provider’s security protocols are not robust enough.
+- Limited Control Over Data: Customers have limited control over data security, maintenance, and where their data resides, which could be a concern for compliance.
+- Network and Availability Risks: Public cloud services are dependent on internet connectivity, and any network failure can result in service downtime or data inaccessibility.
+
+**2 Private Cloud**
+
+A private cloud is dedicated to a single organization. It can be hosted on-premises or by a third-party provider. This deployment offers greater control over resources, security, and compliance.
+
+Characteristics:
+
+- Dedicated Resources: Unlike public clouds, private clouds use resources that are not shared with other customers.
+Customization: Organizations can customize the infrastructure and services based on their specific needs.
+- Increased Security and Control: With greater control over the environment, private clouds are more secure for handling sensitive data.
+
+Examples of Private Cloud Providers:
+
+- VMware Cloud
+- Microsoft Azure Stack
+- OpenStack
+
+Vulnerabilities:
+
+- High Cost: Building and maintaining a private cloud can be expensive due to the need for dedicated hardware, software, and personnel.
+- Complexity: Managing and securing a private cloud requires a significant amount of technical expertise, which could strain an organization's resources.
+- Limited Scalability: While private clouds can scale, they may not be as flexible or cost-effective as public clouds in responding to dynamic demand.
+
+**3 Hybrid Cloud**
+
+Hybrid clouds combine both public and private clouds, allowing organizations to move workloads between them depending on security, compliance, and operational needs. This model is ideal for businesses that require both flexibility and control.
+
+Characteristics:
+
+- Flexibility: Hybrid clouds allow organizations to run sensitive workloads on private clouds and less critical workloads on public clouds.
+- Seamless Integration: The integration of both private and public clouds enables businesses to take advantage of the benefits of both while avoiding the limitations of each.
+- Cost Efficiency: Hybrid clouds allow businesses to optimize costs by leveraging the public cloud for general-purpose services while using the private cloud for sensitive data and operations.
+
+Vulnerabilities:
+
+- Complexity in Management: Managing a hybrid environment can be complex due to the need to ensure compatibility between private and public clouds.
+- Data Transfer Risks: Data transferred between public and private clouds can be vulnerable to interception or loss if not adequately encrypted and secured.
+- Inconsistent Security Policies: Ensuring uniform security policies across both environments can be challenging, and lapses may lead to vulnerabilities.
+
+| Model | Description | Key Characteristics | Examples | Common Vulnerabilities |
+|-------|-------------|---------------------|----------|------------------------|
+| **Public Cloud** | Owned and operated by third-party providers, offering services to multiple organizations via shared infrastructure. | - Shared resources<br>- Cost-effective<br>- Highly scalable | AWS, Google Cloud Platform, Microsoft Azure | - Data security & privacy concerns<br>- Limited control over data location & security<br>- Dependent on internet availability |
+| **Private Cloud** | Dedicated to a single organization, hosted on-premises or by a third-party provider. | - Dedicated resources<br>- Customizable infrastructure<br>- Increased security & control | VMware Cloud, Microsoft Azure Stack, OpenStack | - High cost of setup & maintenance<br>- Requires significant technical expertise<br>- Limited scalability compared to public cloud |
+| **Hybrid Cloud** | Combines public and private clouds, allowing workload movement based on needs. | - Flexibility for workload placement<br>- Seamless integration between environments<br>- Cost efficiency through resource optimization | *(Combination of public & private providers)* | - Complex management requirements<br>- Data transfer security risks<br>- Inconsistent security policies between environments |
 
 
 ```mermaid
@@ -647,4 +708,48 @@ flowchart TB
     title --> SaaS
     title --> PaaS
     title --> IaaS
+
+classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
+
+:brain: Public cloud provides resources over the internet to the general public, private cloud offers dedicated resources for a single organization, and hybrid cloud combines both public and private clouds to allow data and applications to be shared between them.
+
+### Open Questions ###
+
+1. Which cloud service model gives the customer the least control over infrastructure and application management?
+<details>
+  <summary>Show answer</summary>
+Software as a Service (SaaS) — because the provider manages everything from infrastructure to the application itself, while the user only manages data and usage.
+</details>
+
+2. In which cloud deployment model are resources dedicated to a single organization, often resulting in higher costs and greater security control?
+<details>
+  <summary>Show answer</summary>
+Private Cloud — resources are not shared, and the organization can fully customize and secure the environment.
+</details>
+
+3. A company needs to rent virtual machines and storage but wants to install and manage its own operating systems and applications. Which cloud service model fits this requirement?
+<details>
+  <summary>Show answer</summary>
+Infrastructure as a Service (IaaS) — the provider manages the physical infrastructure, but the customer manages the OS, apps, and data.
+</details>
+
+4. Which cloud deployment model allows an organization to place sensitive workloads in a private cloud while running less critical workloads in a public cloud?
+<details>
+  <summary>Show answer</summary>
+Hybrid Cloud — it combines the control of private clouds with the flexibility and scalability of public clouds.
+</details>
+
+5. What is a common security risk for both PaaS and IaaS environments due to their multi-tenant nature?
+<details>
+  <summary>Show answer</summary>
+Shared infrastructure risk — vulnerabilities or poor isolation between tenants could lead to data leakage or cross-tenant attacks.
+</details>
+
+
+
+
+## Distributed systems ##
+
+
