Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -750,6 +750,113 @@ Shared infrastructure risk — vulnerabilities or poor isolation between tenants
 
 
 
-## Distributed systems ##
+## 3.5.7 Distributed systems ##
 
+A distributed system (aka **Distributed Computing Environment DCE**) consists of multiple independent computers (often referred to as nodes) that communicate over a network to coordinate and perform a task. These systems typically work together to ensure that resources such as computational power, storage, and data are shared and efficiently utilized. The key feature of distributed systems is the decentralization of resources, meaning there is no single point of control or failure.
+
+Characteristics of Distributed Systems are:
+- Multiple Autonomous Components: Each node in a distributed system operates independently, yet cooperatively, with other nodes.
+- Scalability: Distributed systems are often designed to scale horizontally, allowing new nodes to be added as the system grows to handle increasing workloads.
+- Fault Tolerance: Distributed systems are designed to maintain functionality even if one or more nodes fail. This is often achieved through redundancy and replication mechanisms.
+- Concurrency: Distributed systems allow multiple processes to execute concurrently, providing efficient utilization of resources.
+- Communication Over Networks: Nodes communicate with each other over networks using various protocols, such as TCP/IP, HTTP, or custom communication protocols.
+
+Distributed systems consist of several components, each of which plays a crucial role in maintaining the system’s efficiency, security, and reliability.
+
+1 **Nodes (Computing Devices)** can be any computing device, such as a server, desktop, or mobile device. Each node performs computations and stores data, but no node has complete control over the entire system. Nodes communicate with each other over a network to coordinate and complete tasks.
+
+2 **Middleware** is a software layer that lies between the operating system and the applications on each node. It helps manage communication, data sharing, and synchronization across the distributed system. Middleware provides a common interface and allows different types of hardware and software to work together efficiently.
+
+3 **Communication Protocols.** For nodes to communicate, distributed systems use a variety of communication protocols. These protocols define the rules for data exchange and ensure that messages are delivered accurately and securely across the network. Interface Definition Languages (IDLs) are often used to describe the services and data structures exchanged between components, making interactions language-agnostic. Technologies such as Remote Procedure Calls (RPC), CORBA, and DCOM use these definitions to enable seamless communication between distributed components as if they were running on the same machine.
+
+:bulb: A brief overview of how RPC, CORBA, and DCOM work:
+| Technology | Core Idea | How It Works | Key Features / Goals |
+|------------|-----------|-------------|-----------------------|
+| **RPC (Remote Procedure Call)** | Call remote functions as if local | Client calls stub → request marshalled → sent over network → server stub executes → result returned | Simple, language-neutral, hides networking details |
+| **CORBA (Common Object Request Broker Architecture)** | Object-oriented RPC via an Object Request Broker (ORB) | Interfaces defined with IDL → ORB locates objects, marshals data, transports messages → results returned transparently | Cross-language, cross-platform, standardized by OMG |
+| **DCOM (Distributed Component Object Model)** | Microsoft’s distributed extension of COM | COM interfaces exposed remotely → DCOM handles marshalling, authentication, transport → client uses interface as if local | Windows-focused, built-in security and component management |
+
+
+```mermaid
+graph TD
+  A[Distributed System] --> B[Nodes - Computing Devices]
+  A --> C[Middleware]
+  A --> D[Communication Protocols]
+
+  %% NODES
+  subgraph Bx[Nodes]
+    B1[Server]
+    B2[Desktop]
+    B3[Mobile]
+    B1 --- B2
+    B2 --- B3
+    B3 --- B1
+    Bnote[No single node controls the whole system.\nEach computes & stores data.\nNodes coordinate over the network.]
+    Bnote -.-> B1
+  end
+
+  %% MIDDLEWARE
+  subgraph Cx[Middleware]
+    C1[Service Discovery]
+    C2[Data Sharing & Caching]
+    C3[Coordination & Synchronization]
+    C4[Common APIs / Interfaces]
+  end
+
+  %% PROTOCOLS
+  subgraph Dx[Communication Protocols]
+    D1[Transport: TCP / UDP]
+    D2[Application: HTTP / gRPC]
+    D3[Security: TLS]
+    D4[Reliability: ACK / Retry]
+  end
+
+  %% RELATIONSHIPS
+  B -->|uses| C
+  C -->|relies on| D
+  B -->|communicate via| D
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+Distributed systems can be **categorized** based on their architecture and the way they manage resources. The most common types include:
+
+1 **Client-Server Systems.** In client-server systems, nodes are divided into two roles: clients and servers. Clients request services or resources, and servers provide these resources. This architecture is commonly used for applications where clients access centralized data or services.
+
+2 **Peer-to-Peer (P2P) Systems.** In peer-to-peer systems, all nodes are equal and share resources with each other. Each node can act both as a client and as a server, depending on the situation. P2P systems are highly decentralized and are often used in file-sharing applications or distributed ledger technologies.
+
+3 **Cloud-based Distributed Systems.** Cloud services like IaaS, PaaS, and SaaS, discussed in the previous section, are essentially large-scale distributed systems. These systems involve coordination between thousands of nodes to deliver services like storage, processing power, and software over the internet.
+
+### Open Questions ###
+
+1. What is the key feature that differentiates a distributed system from a centralized system?
+<details>
+  <summary>Show answer</summary>
+The decentralization of resources, meaning no single node has complete control or represents a single point of failure.
+</details>
+
+2. How does middleware contribute to the efficiency of a distributed system?
+<details>
+  <summary>Show answer</summary>
+Middleware provides a common interface that manages communication, synchronization, and data sharing across nodes, allowing different hardware and software to work together seamlessly.
+</details>
+
+3. Why are Interface Definition Languages (IDLs) important in distributed systems?
+<details>
+  <summary>Show answer</summary>
+IDLs describe services and data structures in a language-agnostic way, enabling technologies like RPC, CORBA, and DCOM to allow components written in different programming languages to communicate transparently.
+</details>
+
+4. What mechanisms help distributed systems remain functional even when some nodes fail?
+<details>
+  <summary>Show answer</summary>
+Fault tolerance mechanisms such as redundancy and replication ensure that the system continues to operate despite individual node failures.
+</details>
+
+5. How do client-server and peer-to-peer architectures differ in distributed systems?
+<details>
+  <summary>Show answer</summary>
+In client-server systems, clients request services from dedicated servers, while in peer-to-peer systems, all nodes are equal and can act as both clients and servers, leading to greater decentralization.
+</details>
 
