Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -778,38 +778,12 @@ Distributed systems consist of several components, each of which plays a crucial
 
 
 ```mermaid
-graph TD
+graph LR
   A[Distributed System] --> B[Nodes - Computing Devices]
   A --> C[Middleware]
   A --> D[Communication Protocols]
 
-  %% NODES
-  subgraph Bx[Nodes]
-    B1[Server]
-    B2[Desktop]
-    B3[Mobile]
-    B1 --- B2
-    B2 --- B3
-    B3 --- B1
-    Bnote[No single node controls the whole system.\nEach computes & stores data.\nNodes coordinate over the network.]
-    Bnote -.-> B1
-  end
 
-  %% MIDDLEWARE
-  subgraph Cx[Middleware]
-    C1[Service Discovery]
-    C2[Data Sharing & Caching]
-    C3[Coordination & Synchronization]
-    C4[Common APIs / Interfaces]
-  end
-
-  %% PROTOCOLS
-  subgraph Dx[Communication Protocols]
-    D1[Transport: TCP / UDP]
-    D2[Application: HTTP / gRPC]
-    D3[Security: TLS]
-    D4[Reliability: ACK / Retry]
-  end
 
   %% RELATIONSHIPS
   B -->|uses| C
