Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -802,6 +802,8 @@ Distributed systems can be **categorized** based on their architecture and the w
 
 3 **Cloud-based Distributed Systems.** Cloud services like IaaS, PaaS, and SaaS, discussed in the previous section, are essentially large-scale distributed systems. These systems involve coordination between thousands of nodes to deliver services like storage, processing power, and software over the internet.
 
+:link: [ISO SC 38](https://www.iso.org/committee/601355.html) serves as the focus, proponent, and systems integration entity on Cloud Computing, Distributed Platforms, and the application of these technologies. SC 38 provides guidance to JTC 1, IEC, ISO and other entities developing standards in these areas.
+
 ### Open Questions ###
 
 1. What is the key feature that differentiates a distributed system from a centralized system?
@@ -833,4 +835,54 @@ Fault tolerance mechanisms such as redundancy and replication ensure that the sy
   <summary>Show answer</summary>
 In client-server systems, clients request services from dedicated servers, while in peer-to-peer systems, all nodes are equal and can act as both clients and servers, leading to greater decentralization.
 </details>
+
+
+## 3.5.8 Internet of things ##
+
+The Internet of Things (IoT) refers to a network of physical devices embedded with sensors, software, and other technologies that enable them to connect and exchange data over the internet. These devices can range from everyday household items like smart thermostats and refrigerators to complex industrial machinery used in manufacturing, healthcare, and energy systems. Securing these devices is becoming increasingly important.
+
+One of the most defining features of IoT is its ability to connect objects that were traditionally not connected to the internet. This connectivity allows devices to communicate with each other and with centralized systems, enabling automation, remote monitoring, and real-time data exchange. The pervasive nature of IoT leads to significant advantages such as improved efficiency, and productivity in both consumer and industrial environments.
+IoT devices are often designed to operate with minimal user intervention. Many are autonomous, meaning they collect and analyze data automatically, making decisions or sending alerts based on predefined rules. 
+
+:necktie: Never trust the default settings on IoT devices: ensure that each device is properly configured and secured before connecting it to the network to prevent easy exploitation by attackers.
+
+These devices are typically small, lightweight, and energy-efficient, enabling them to be deployed in large numbers. This is especially relevant in industrial settings, where thousands of IoT devices may be integrated into complex systems for monitoring, controlling, and optimizing processes. With the data collected from these devices, businesses can make data-driven decisions.
+
+Connectivity and automation are further enabled by the diverse range of communication protocols used in IoT, such as Wi-Fi, Bluetooth, Zigbee, and cellular networks. Each protocol is designed to address specific needs in terms of range, power consumption, and data throughput. The variety of these protocols adds flexibility in the design and application of IoT solutions, but it also creates challenges in terms of managing and securing a multitude of device types and communication methods.
+
+:bulb: The **“three dumb routers” configuration** is an IoT network security practice designed to isolate vulnerable smart devices (IoT) from your main network. It's sometimes called the triple-router setup and works like this:
+
+1. Router #1 (ISP Gateway). This is your main internet router or modem/router combo from your ISP. Its only job is to pass the internet connection to the next router(s). No devices are connected directly to this router.
+
+2. Router #2 (Primary / Trusted Network). Connected to Router #1. Hosts your trusted devices such as computers, phones, and tablets. Provides your "normal" home Wi-Fi or wired network.
+
+3. Router #3 (IoT Network). Also connected to Router #1, but separate from Router #2. Hosts only IoT devices — cameras, smart bulbs, voice assistants, appliances. Prevents IoT devices (which often have weak security) from seeing or attacking your trusted devices on Router #2.
+
+Despite its numerous benefits, IoT introduces several security concerns that need to be carefully managed. One of the primary vulnerabilities of IoT devices is their often inadequate security. Many IoT devices are designed with convenience and cost-effectiveness in mind, which can lead to security features being overlooked or underdeveloped. As a result, these devices can be susceptible to various types of attacks, including unauthorized access, data interception, and device manipulation.
+
+One of the most concerning vulnerabilities is **weak authentication and authorization mechanisms**. Many IoT devices have default passwords that users rarely change, and in some cases, the devices lack proper authentication protocols altogether. This makes it easy for attackers to gain unauthorized access to devices, which can lead to various forms of exploitation, such as data theft, unauthorized control, or the ability to launch further attacks within a network.
+
+The sheer number of IoT devices can also create a challenge for security teams. **Each device often requires its own management**, but many organizations lack the resources or infrastructure to properly track and monitor all devices. This increases the risk of devices being overlooked, left unpatched, or poorly configured, making them more vulnerable to exploitation. Additionally, when devices are compromised, they can become entry points into broader network attacks, allowing hackers to escalate their privileges and access more sensitive systems or data.
+
+Another significant vulnerability is the **transmission of sensitive data**. Many IoT devices transmit data over the internet, often without proper encryption. This means that attackers can potentially intercept the data in transit, gaining access to sensitive information such as personal user details, business data, or even control over the devices themselves. Without robust encryption and secure communication protocols, data can be exposed to man-in-the-middle attacks, leading to significant risks for both individuals and organizations.
+
+The **long lifecycle** of many IoT devices also presents a challenge. Once deployed, these devices may remain in operation for many years, but vendors may not continue providing software updates or security patches. This leaves devices vulnerable to known exploits, which can be particularly dangerous if they are deployed in critical infrastructure environments such as healthcare, transportation, or energy systems. Over time, the lack of ongoing support can result in an accumulation of security gaps that attackers can exploit.
+
+Furthermore, the wide variety of IoT devices, each with different manufacturers, communication protocols, and hardware specifications, creates a **fragmented security landscape**. This complexity makes it difficult to apply standardized security measures across all devices, increasing the risk that some devices may not receive adequate protection. Managing the security of such a heterogeneous environment requires comprehensive policies, regular audits, and specialized tools to monitor the devices and ensure they are secure.
+
+Lastly, IoT devices can be used as part of larger botnet attacks. The famous Mirai botnet attack, for example, exploited vulnerable IoT devices to carry out large-scale Distributed Denial-of-Service (DDoS) attacks. IoT devices, which are often left with weak security configurations, can be hijacked and controlled by attackers without the knowledge of the device owner, and they can then be used to flood websites or networks with traffic, disrupting services and causing financial damage.
+
+The following table summarizes key IoT security prctices:
+| Security Area                  | Best Practices / Recommendations |
+|--------------------------------|---------------------------------|
+| **Authentication & Access**    | Use strong, unique credentials; replace default passwords; implement access controls to limit interactions with devices. |
+| **Encryption**                  | Apply robust encryption for data storage and transmission to protect sensitive information. |
+| **Software Updates & Patching** | Regularly check for and apply firmware/software updates; ensure secure upgrade mechanisms without exposing the network. |
+| **Network Segmentation**        | Isolate IoT devices on a separate network to limit potential impact if a device is compromised. |
+| **Monitoring & Visibility**     | Deploy centralized monitoring solutions to track device status, detect vulnerabilities or unusual behavior, and ensure patch compliance. |
+
+:link: The [NIST Cybersecurity for IoT Program’s](https://www.nist.gov/itl/applied-cybersecurity/nist-cybersecurity-iot-program) mission is to cultivate trust in the IoT and foster an environment that enables innovation on a global scale through standards, guidance, and related tools.
+
+
+:link: [Shodan](https://www.shodan.io/) is a specialized search engine for Internet-connected devices. Unlike Google, which indexes websites, Shodan scans the internet for devices such as servers, webcams, routers, industrial control systems, and IoT devices. It collects metadata about open ports, services, software versions, and sometimes even default credentials.
 
