--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -839,7 +839,7 @@ In client-server systems, clients request services from dedicated servers, while
 
 ## 3.5.8 Internet of things ##
 
-The Internet of Things (IoT) refers to a network of physical devices embedded with sensors, software, and other technologies that enable them to connect and exchange data over the internet. These devices can range from everyday household items like smart thermostats and refrigerators to complex industrial machinery used in manufacturing, healthcare, and energy systems. Securing these devices is becoming increasingly important.
+The Internet of Things (IoT) refers to a network of physical devices embedded with [sensors](, software, and other technologies that enable them to connect and exchange data over the internet. These devices can range from everyday household items like smart thermostats and refrigerators to complex industrial machinery used in manufacturing, healthcare, and energy systems. Securing these devices is becoming increasingly important.
 
 One of the most defining features of IoT is its ability to connect objects that were traditionally not connected to the internet. This connectivity allows devices to communicate with each other and with centralized systems, enabling automation, remote monitoring, and real-time data exchange. The pervasive nature of IoT leads to significant advantages such as improved efficiency, and productivity in both consumer and industrial environments.
 IoT devices are often designed to operate with minimal user intervention. Many are autonomous, meaning they collect and analyze data automatically, making decisions or sending alerts based on predefined rules. 
